# bjrs

./: .clippy.toml  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/: cli_blackjack.rs
src/: card.rs  error.rs  hand.rs  lib.rs  options.rs  result.rs  sync.rs
src/game/: actions.rs  bet.rs  dealer.rs  insurance.rs  mod.rs  state.rs
tests/: game.rs
web/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  styles.css  wasm.d.ts
web/wasm/: Cargo.toml
web/wasm/src/: lib.rs
