[package]
name = "bjrs"
version = "0.1.1"
edition = "2024"
description = "A blackjack game engine with optional no_std support."
license = "MIT OR Apache-2.0"
repository = "https://github.com/waki285/bjrs"
homepage = "https://github.com/waki285/bjrs"
readme = "README.md"
keywords = ["blackjack", "cards", "game", "casino", "no-std"]
categories = ["games", "no-std"]

rust-version = "1.86"

include = [
    "src/**",
    "examples/**",
    "tests/**",
    "Cargo.toml",
    "README.md",
    "LICENSE*",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std = ["rand/std", "rand_chacha/std", "thiserror/std"]
alloc = ["dep:hashbrown", "dep:spin", "dep:libm"]

[dependencies]
hashbrown = { version = "0.16.1", features = ["alloc", "core"], optional = true }
spin = { version = "0.10", optional = true }
rand = { version = "0.9", default-features = false, features = ["alloc"] }
rand_chacha = { version = "0.9", default-features = false }
libm = { version = "0.2", optional = true }
thiserror = { version = "2.0", default-features = false }

[lints.rust]
missing_docs = "warn"

[lints.clippy]
allow_attributes = "deny" # Use expect(lint) instead
cargo = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
std_instead_of_alloc = "deny"
std_instead_of_core = "deny"
struct_excessive_bools= "allow"
too_many_lines = "allow"
trivially_copy_pass_by_ref = "allow"
unused_self = "allow"
unwrap_used = "warn"